# kik-hotornot

./: .gitignore  bower.json  db.ini.example  index.html  kik-hotornot.cabal
scripts/: build.sh
sql/: ratings.sql  users.sql
src/: Main.hs  server.hs
